tests/ui/flatten_and_parse.stderr
error: parse attribute is not allowed for flattened entry
  --> $DIR/flatten_and_parse.rs:22:21
   |
22 |     #[clap(flatten, parse(from_occurrences))]
   |                     ^^^^^
